--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "marketmanagement",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://vanviendong96.github.io/MHMarket",
+  "homepage": "https://vanviendong96.github.io",
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
