--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "react-draggable": "^4.4.5",
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0",
+    "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "gh-pages": "^4.0.0",
     "typescript": "^4.6.3",
