feature: implement drag and drop stall

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "konva": "^8.3.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
+    "react-konva": "^18.2.3",
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0",
     "uuid": "^9.0.0",
