--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-konva": "^18.2.3",
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0",
+    "use-image": "^1.1.0",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/uuid": "^8.3.4",
