--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "latest",
     "konva": "^8.3.13",
     "notistack": "^2.0.8",
+    "path": "^0.12.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-draggable": "^4.4.5",
@@ -32,8 +33,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.8",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^1.3.0",
     "gh-pages": "^4.0.0",
