added dayjs, implement some common components of stall application form

--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
-    "@mui/x-date-pickers": "^5.0.0",
     "axios": "^1.2.0",
-    "dayjs": "latest",
+    "@mui/x-date-pickers": "^5.0.8",
+    "dayjs": "^1.11.6",
     "konva": "^8.3.13",
     "notistack": "^2.0.8",
     "path": "^0.12.7",
