--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.0",
     "@mui/x-date-pickers": "^5.0.8",
     "dayjs": "^1.11.6",
+    "immer": "^9.0.16",
     "konva": "^8.3.13",
     "notistack": "^2.0.8",
     "path": "^0.12.7",
