--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.4.1",
     "sass": "^1.55.0",
     "use-image": "^1.1.0",
+    "use-immer": "^0.8.1",
     "uuid": "^9.0.0",
     "vite-plugin-svgr": "^2.2.1"
   },
