--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.0",
     "konva": "^8.3.13",
     "notistack": "^2.0.8",
     "react": "^18.0.0",
@@ -25,7 +26,8 @@
     "sass": "^1.55.0",
     "use-image": "^1.1.0",
     "uuid": "^9.0.0",
-    "vite-plugin-svgr": "^2.2.1"
+    "vite-plugin-svgr": "^2.2.1",
+    "dayjs": "latest"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
