--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@mui/x-date-pickers": "^5.0.0",
+    "axios": "^1.2.0",
+    "dayjs": "latest",
     "konva": "^8.3.13",
     "notistack": "^2.0.8",
     "react": "^18.0.0",
@@ -26,8 +28,7 @@
     "sass": "^1.55.0",
     "use-image": "^1.1.0",
     "uuid": "^9.0.0",
-    "vite-plugin-svgr": "^2.2.1",
-    "dayjs": "latest"
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
