Dockerize project for deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,16 +3,17 @@ services:
   market-web-dev:
     image: mhmarket/web:latest
     container_name: market-web
+    command: npm run dev -- --host
     environment:
-      PORT: 9500
-      API_URL: http://103.162.20.141:8000/api/v2
+      VITE_BASE_URL: http://103.162.20.141:8000/api/v2
     ports:
-      - "9500"
+      - "3000:3000"
     networks:
       - mh-network
     dns:
       - 192.168.200.4
       - 8.8.8.8
+    restart: unless-stopped
 networks:
   mh-network:
     driver: bridge
