Dockerize project for deploy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       - 192.168.200.4
       - 8.8.8.8
     volumes:
-      - ./:/frontend
-      - /frontend/node_modules
+      - ./:/app/
 
 networks:
   mh-network:
