--- a/default.conf
+++ b/default.conf
@@ -1,27 +1,11 @@
-upstream client {
-  server client:3000;
-}
-
-upstream api {
-  server api:3001;
-}
+// nginx.conf
 
 server {
   listen 80;
 
   location / {
-      proxy_pass http://client;
-  }
-
-  location /sockjs-node {
-      proxy_pass http://client;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-  }
-
-  location /api {
-      rewrite /api/(.*) /$1 break;
-      proxy_pass http://api;
+    root /usr/share/nginx/html/;
+    include /etc/nginx/mime.types;
+    try_files $uri $uri/ /index.html;
   }
 }
