--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,17 +1,27 @@
-server {    
+upstream client {
+  server client:3000;
+}
 
-    listen 80;
+upstream api {
+  server api:3001;
+}
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri /index.html =404;
-    }
+server {
+  listen 80;
 
-    error_page 500 502 503 504 /50x.html;
+  location / {
+      proxy_pass http://client;
+  }
 
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-    }
+  location /sockjs-node {
+      proxy_pass http://client;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+  }
 
+  location /api {
+      rewrite /api/(.*) /$1 break;
+      proxy_pass http://api;
+  }
+}
