--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,27 +1,17 @@
-upstream client {
-  server client:3000;
-}
-
-upstream api {
-  server api:3001;
-}
-
 server {
-  listen 80;
 
-  location / {
-      proxy_pass http://client;
-  }
+    listen 80;
 
-  location /sockjs-node {
-      proxy_pass http://client;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-  }
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri /index.html =404;
+    }
 
-  location /api {
-      rewrite /api/(.*) /$1 break;
-      proxy_pass http://api;
-  }
-}
+    error_page 500 502 503 504 /50x.html;
+
+    location = /50x.html {
+        root /usr/share/nginx/html;
+    }
+    }
+
