--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,13 @@ services:
 networks:
   mh-network:
     driver: bridge
+
+    version: "3.7"
+      services:
+      frontend:
+        build:
+        context: .
+        container_name: frontend
+        ports:
+          - "3000:80" # map 80 in container => 3000 in local
+
