--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "npm run dev -- --host"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
