--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.8'
 services:
   market-web-dev:
-    image: mhmarket/web:latest
+    image: 211020/mhmarket-web
     container_name: market-web
     environment:
       VITE_BASE_URL: http://103.162.20.141:8000/api/v2
     ports:
-      - "9500:3000"
+      - "9500:80"
     networks:
       - mh-network
     dns:
